<resources>
    <string name="app_name">AndroidLogingRegisterApp</string>


    <!-- Strings related to login page-->
    <string name="login_tv">Login</string>
    <string name="email_tv">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>

    <!-- Strings related to register page -->
    <string name="register_tv">Register</string>

    <!-- Strings related to home page -->
    <string name="logout_btn">Logout</string>


</resources>
