<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    tools:context=".RegisterActivity">


    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgview_logo"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register_tv"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_reg"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/email_tv"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/emailEtReg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/passwordEtReg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/c_password"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/cPasswordEtReg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/registerBtnReg"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/linear1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/bt_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/register_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginBtnReg"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/registerBtnReg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/bt_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>