<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/imgview_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_twitter" />

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgview_logo"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_tv"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/email_tv"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/linear1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/bt_bg"
                android:fontFamily="sans-serif-medium"
                android:onClick="handleLogin"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_bg"
                android:fontFamily="sans-serif-medium"
                android:onClick="handleRegister"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/register_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>